[tool.poetry]
name = "botanim-bot"
version = "0.1.0"
description = ""
authors = ["makualiyev <maku.aliyev@gmail.com>"]
readme = "README.md"
packages = [{include = "botanim_bot"}]

[tool.poetry.dependencies]
python = "^3.10"
python-telegram-bot = "^20.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
